Stylesheet problem fixed, now trying to fix stretched images.

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ body {
   height: auto;
   width: 100%;
   margin: 0 auto;
-  background-position: 50% 50%;
   background-size: 100% 100%;
 }
 
